footballnews added to index

--- a/elements/my-greeting/my-greeting.html
+++ b/elements/my-greeting/my-greeting.html
@@ -136,16 +136,33 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		<div class="card-body"/>
 		  <div class="card-content">
 		    <h4>Autores</h4>
-		    <p>-</p>
+		    <p>Manuel García-Amado</p>
 		    <h4>Descripción</h4>
-		    <p>-</p>
-		    <a href="">[1]</a>-
+		    <p>Este portal web es una herramienta para el analisis de aspectos y sentimientos en comentarios en el entorno de la restauración.</p>
+		    <a href="http://gsi.dit.upm.es/administrator/components/com_jresearch/files/publications/manutfg.pdf">[1]</a>Development of an Aspect-based Sentiment Analyzer for the Social Web and Application to Product Reviews.
 		  </div>
 		  <div class="card-actions">
 		    <paper-button class="button-index"><a href="/absa">Explore</a></paper-button>
 		  </div>
 		</div>
 	</paper-card>
+
+<!--Footballnews-->
+  <paper-card heading="Football News">
+    <img src = "../../images/footballnews.png"></img>
+    <div class="card-body"/>
+      <div class="card-content">
+        <h4>Autores</h4>
+        <p>Javier Ochoa</p>
+        <h4>Descripción</h4>
+        <p>Esta demo muestra una aplicación de Sefarad (Visualization Framework) y Senpy (Sentiment y Emotion Analysis) a través del análisis de noticias sobre equipos de fútbol.</p>
+        <a href="http://gsi.dit.upm.es/administrator/components/com_jresearch/files/publications/memoriaJavi.pdf">[1]</a>Design and Implementation of a Scraping system for Sport News.
+      </div>
+      <div class="card-actions">
+        <paper-button class="button-index"><a href="/footballnews">Explore</a></paper-button>
+      </div>
+    </div>
+  </paper-card>
     </div>
 <!--
     <div class="cd-fixed-bg cd-bg-1">
