data cleaned, index updated

--- a/elements/my-greeting/my-greeting.html
+++ b/elements/my-greeting/my-greeting.html
@@ -11,7 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="my-greeting">
   <link rel="import" type="css" href="my-greeting.css">
   <template>
-    <div class="content">
+    <!---<div class="content">
       <h2 class="title">ANALYSIS</h2>
       <span class="small">Check our analysis features and test it</span>
       </br>
@@ -53,10 +53,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <p>Data accuracy and high speed are key prerequisites for the platform’s success. We use platforms oriented to big data to perform speed.</p>
         </div>
       </div>
-    </div>
+    </div>-->
     <div style="text-align: center; margin-bottom:15px">
-    <h2 class="title">WIDGETS</h2>
-    <span class="small">Check our widgets and test them by clicking 'Explore' button</span>   
+    <h2 class="title">DASHBOARDS</h2>
+    <span class="small">Check our dashboards and test them by clicking 'Explore' button</span>   
     </div>
     <div class="cards-container">
 <!--Tourpedia-->
@@ -67,7 +67,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		    <h4>Autores</h4>
 		    <p>Enrique Conde Sánchez</p>
 		    <h4>Descripción</h4>
-		    <p>Este es el dashboard de tourpediaEste es el dashboard de tourpediaEste es el dashboard de tourpediaEste es el dashboard de tourpediaEste es el dashboard de tourpediaEste es el dashboard de tourpedia</p>
+		    <p>Herramienta para la visualización del analisis de reviews de distintos establecimientos filtrados por ciudades y categorías.</p>
 		    <h4>References</h4>
 		    <p><a href="http://www.gsi.dit.upm.es/administrator/components/com_jresearch/files/publications/tfgenriqueconde.pdf">[1]</a> Development of a Social Media Monitoring System based on Elasticsearch and Web Components Technologies</p>
 		  </div>
