--- a/elements/my-greeting/my-greeting.html
+++ b/elements/my-greeting/my-greeting.html
@@ -11,65 +11,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="my-greeting">
   <link rel="import" type="css" href="my-greeting.css">
   <template>
-    <!---<div class="content">
-      <h2 class="title">ANALYSIS</h2>
-      <span class="small">Check our analysis features and test it</span>
-      </br>
-      <div class="row">
-        <div class="element">
-          <div class="ring ring-blue">
-            <a href="/touroedia">
-              <div class="circletag1"></div>
-            </a>
-          </div>
-          <h5 class="blue-border-bottom">Intuitive Workflow</h5>
-          <p>Identification, evaluation, analysis, dissemination – a quick guide through the intelligence process.</p>
-        </div>
-        <div class="element">
-          <div class="ring ring-teal">
-            <a href="/footballmood">
-              <div class="circletag2"></div>
-            </a>
-          </div>
-          <h5 class="teal-border-bottom">Semantic Technology</h5>
-          <p>Understanding language and transforming data into applicable knowledge. Search in natural language.</p>
-        </div>
-        <div class="element">
-          <div class="ring ring-ambar">
-            <a data-route="dashtourpedia" href="/dashtourpedia">
-              <div class="circletag3"></div>
-            </a>
-          </div>
-          <h5 class="ambar-border-bottom">Visualisation</h5>
-          <p>Easy navigation and sophisticated visualisation tools guide our users through the complexity of large data volumes.</p>
-        </div>
-        <div class="element">
-          <div class="ring ring-grey">
-            <a href="/dashtourpedia">
-              <div class="circletag4"></div>
-            </a>
-          </div>
-          <h5 class="grey-border-bottom">Performance</h5>
-          <p>Data accuracy and high speed are key prerequisites for the platform’s success. We use platforms oriented to big data to perform speed.</p>
-        </div>
-      </div>
-    </div>-->
+
     <div style="text-align: center; margin-bottom:15px">
     <h2 class="title">DASHBOARDS</h2>
-    <span class="small">Check our dashboards and test them by clicking 'Explore' button</span>   
+    <span class="small">Add your new dashboard here or just edit created one</span>   
     </div>
     <div class="cards-container">
 <!--Tourpedia-->
-	<paper-card heading="Dashboard Tourpedia">
+	<paper-card heading="Dashboard Demo">
 		<img src = "../../images/dashboard.png"></img>
 		<div class="card-body"/>
 		  <div class="card-content">
-		    <h4>Autores</h4>
-		    <p>Enrique Conde Sánchez</p>
-		    <h4>Descripción</h4>
-		    <p>Herramienta para la visualización del analisis de reviews de distintos establecimientos filtrados por ciudades y categorías.</p>
+		    <h4>Author</h4>
+		    <p>Your name goes here</p>
+		    <h4>Description</h4>
+		    <p>Explain here your dashboard ideas</p>
 		    <h4>References</h4>
-		    <p><a href="http://www.gsi.dit.upm.es/administrator/components/com_jresearch/files/publications/tfgenriqueconde.pdf">[1]</a> Development of a Social Media Monitoring System based on Elasticsearch and Web Components Technologies</p>
+		    <p>Add some references</p>
 		  </div>
 		  <div class="card-actions">
 		    <paper-button class="button-index"><a href="/tourpedia">Explore</a></paper-button>
@@ -78,131 +36,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		</div>
 	</paper-card>
 
-<!--FTT-->
-	<paper-card heading="Financial Twitter Tracker">
-		<img src = "../../images/ftt.png"></img>
-		<div class="card-body"/>
-		  <div class="card-content">
-		    <h4>Autores</h4>
-		    <p>J. Fernando Sánchez-Rada, Marcos Torres, Miguel Coronado, Álvaro Carrera</p>
-		    <h4>Descripción</h4>
-		    <p>Herramienta de visualización del sentimiento de tweets sobre diferentes compañías que cotizan en bolsa con el objetivo de estudiar la correlación entre dicho sentimiento y el movimiento bursátil. </p>
-		    <h4>References</h4>
-		    <p></p>
-		  </div>
-		  <div class="card-actions">
-		    <paper-button class="button-index"><a href="/dashftt">Explore</a></paper-button>
-		  </div>
-		</div>
-	</paper-card>
 
-<!--Footballmood-->
-	<paper-card heading="Football Mood">
-		<img src = "../../images/footballmood.png"></img>
-		<div class="card-body"/>
-		  <div class="card-content">
-		    <h4>Autores</h4>
-		    <p>Alberto Pascual Saaevedra</p>
-		    <h4>Descripción</h4>
-		    <p>Esta demo muestra una aplicación de Sefarad (Visualization Framework) y Senpy (Sentiment y Emotion Analysis) a través del análisis de Tweets de un partido de fútbol.</p>
-		    <a href="http://footballmood.cluster.gsi.dit.upm.es/">Demo</a>
-		  </div>
-		  <div class="card-actions">
-		    <paper-button class="button-index"><a href="/footballmood">Explore</a></paper-button>
-		  </div>
-		</div>
-	</paper-card>
-
-<!--GSICrawler-->
-	<paper-card heading="GSI Crawler">
-		<img src = "../../images/gsicrawler.png"></img>
-		<div class="card-body"/>
-		  <div class="card-content">
-		    <h4>Autores</h4>
-		    <p>José Emilio Carmona y Antonio Fernández Llamas</p>
-		    <h4>Descripción</h4>
-		    <p>Este portal web es una herramienta útil para el análisis de comentarios de diferentes webs, como Amazon, Foursquare, Twitter o Facebook. El usuario elegirá el tipo de análisis que quiere llevar a cabo, obteniendo los comentarios y realizando un análisis de sentimientos o emociones.</p>
-		    <a href="http://www.gsi.dit.upm.es/administrator/components/com_jresearch/files/publications/jecarmona.pdf">[1]</a>Development of a Social Media Crawler for Sentiment Analysis.
-		  </div>
-		  <div class="card-actions">
-		    <paper-button class="button-index"><a href="/gsicrawler" target="_self">Explore</a></paper-button>
-		  </div>
-		</div>
-	</paper-card>
-
-<!--ABSA-->
-	<paper-card heading="Aspects Dashboard">
-		<img src = "../../images/absa.png"></img>
-		<div class="card-body"/>
-		  <div class="card-content">
-		    <h4>Autores</h4>
-		    <p>Manuel García-Amado</p>
-		    <h4>Descripción</h4>
-		    <p>Este portal web es una herramienta para el analisis de aspectos y sentimientos en comentarios en el entorno de la restauración.</p>
-		    <a href="http://gsi.dit.upm.es/administrator/components/com_jresearch/files/publications/manutfg.pdf">[1]</a>Development of an Aspect-based Sentiment Analyzer for the Social Web and Application to Product Reviews.
-		  </div>
-		  <div class="card-actions">
-		    <paper-button class="button-index"><a href="/absa">Explore</a></paper-button>
-		  </div>
-		</div>
-	</paper-card>
-
-<!--Footballnews-->
-  <paper-card heading="Football News">
-    <img src = "../../images/footballnews.png"></img>
-    <div class="card-body"/>
-      <div class="card-content">
-        <h4>Autores</h4>
-        <p>Javier Ochoa</p>
-        <h4>Descripción</h4>
-        <p>Esta demo muestra una aplicación de Sefarad (Visualization Framework) y Senpy (Sentiment y Emotion Analysis) a través del análisis de noticias sobre equipos de fútbol.</p>
-        <a href="http://gsi.dit.upm.es/administrator/components/com_jresearch/files/publications/memoriaJavi.pdf">[1]</a>Design and Implementation of a Scraping system for Sport News.
-      </div>
-      <div class="card-actions">
-        <paper-button class="button-index"><a href="/footballnews">Explore</a></paper-button>
-      </div>
-    </div>
-  </paper-card>
-    </div>
-<!--
-    <div class="cd-fixed-bg cd-bg-1">
-      <h1 class="title-blue">
-        Social Media Analysis
-      </h1>
-
-      <h3>
-        Evaluating Millions of Sources in Seconds.
-      </h3>
-
-      <div class="row">
-        <a href="/dashtourpedia"><button class="button-span">Dashboard</button></a>
-        <a href="/dashdbpedia"><button class="button-span">Query Editor</button></a>
-        <a href="#"><button class="button-span">Emotions</button></a>
-      </div>
-    </div>
-    <div class="bucket -no-bottom g-bg-slate-grey page0 js-photo-stream">
-      <div class="-icon-headline">
-        <div class="row -gutterless">
-            <h3 class="bucket__headline h3 left -with-icon -width-1-2 -mobile-width-1-2 -mobile-larger g-color-white">
-              <span class="gsi-title">
-                See the GSI Group action
-              </span>
-              <a class="git" style="color: #03a9f4;" href="https://github.com/gsi-upm/">View on&nbsp;Github</a>
-          </h3>
-        </div>
-        <div class="row -gutterless -extra-bottom-padding">
-          <p class="little-text">
-            Check out the current projects from GSI&nbsp;Group.
-          </p>
-        </div>
-      </div>
-      <div class="footer">
-        <div class="copyright"> 
-          <small> © 2016 Grupo de Sistemas Inteligentes, DIT-UPM </small>
-        </div>
-      </div>
-    </div>
--->
   </template>
 
   <script>
