--- a/styles/app-theme.html
+++ b/styles/app-theme.html
@@ -25,6 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --dark-primary-color: #00629B;
     --default-primary-color: #00A9E0;
     --light-primary-color: #B2EBF2;
+    --paper-card-background-color: #FFFFFF;
     --text-primary-color: #ffffff; /*text/icons*/
     --accent-color: #FFC107;
     --primary-background-color: #FFD127;
