changes for updated components, now uses node image

--- a/elements/my-greeting/my-greeting.html
+++ b/elements/my-greeting/my-greeting.html
@@ -12,29 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" type="css" href="my-greeting.css">
   <template>
 
-    <div style="text-align: center; margin-bottom:15px">
-    <h2 class="title">DASHBOARDS</h2>
-    <span class="small">Add your new dashboard here or just edit created one</span>   
-    </div>
-    <div class="cards-container">
-<!--Tourpedia-->
-	<paper-card heading="Dashboard Demo">
-		<img src = "../../images/dashboard.png"></img>
-		<div class="card-body"/>
-		  <div class="card-content">
-		    <h4>Author</h4>
-		    <p>Your name goes here</p>
-		    <h4>Description</h4>
-		    <p>Explain here your dashboard ideas</p>
-		    <h4>References</h4>
-		    <p>Add some references</p>
-		  </div>
-		  <div class="card-actions">
-		    <paper-button class="button-index"><a href="/tourpedia">Explore</a></paper-button>
-
-		  </div>
-		</div>
-	</paper-card>
+    <dashboard-tourpedia></dasboard-tourpedia>
 
 
   </template>
