bower dependencies fixed

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <iron-pages attr-for-selected="data-route" selected="home">
 
             <section data-route="home">
-              <my-greeting></my-greeting>
+              <dashboard-tourpedia></dashboard-tourpedia>
             </section>
 
           </iron-pages>
