--- a/elements/elements.html
+++ b/elements/elements.html
@@ -42,8 +42,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-register.html">
 -->
 <!-- Configure your routes here -->
-<link rel="import" href="routing.html">
+<!--<link rel="import" href="routing.html">-->
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
-<link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="dashboard-tourpedia/dashboard-tourpedia.html">
