demo dashdoards added to sefarad

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -45,9 +45,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!--<link rel="import" href="routing.html">-->
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
-<!--<link rel="import" href="dashboard-tourpedia/dashboard-tourpedia.html">-->
+<link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="../bower_components/dashboard-aspects/dashboard-aspects.html">
 <link rel="import" href="../bower_components/dashboard-tourpedia/dashboard-tourpedia.html">
 <link rel="import" href="../bower_components/dashboard-ftt/dashboard-ftt.html">
 <link rel="import" href="../bower_components/elastic-client/elastic-client.html">
-
