--- a/elements/my-greeting/my-greeting.html
+++ b/elements/my-greeting/my-greeting.html
@@ -11,8 +11,73 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="my-greeting">
   <link rel="import" type="css" href="my-greeting.css">
   <template>
+    <div class="content">
+      <h2 class="title">Sefarad Demos</h2>
+      <span class="small">Check our available demos and test them</span>
+      </br>
+      <div class="row">
+        <div class="element">
+          <div class="ring ring-blue">
+            <a href="/demos/tourpedia" target="_blank">
+              <div class="circletag1"></div>
+            </a>
+          </div>
+          <h5 class="blue-border-bottom">Dashboard Tourpedia</h5>
+          <p>Dashboard to visualize data from TourPedia API.</p>
+        </div>
+        <div class="element">
+          <div class="ring ring-teal">
+            <a href="/demos/aspects" target="_blank">
+              <div class="circletag2"></div>
+            </a>
+          </div>
+          <h5 class="teal-border-bottom">Dashboard Aspects</h5>
+          <p>Dashboard for aspect and sentiment analysis in restaurant context.</p>
+        </div>
+        <div class="element">
+          <div class="ring ring-ambar">
+            <a href="/demos/ftt" target="_blank">
+              <div class="circletag3"></div>
+            </a>
+          </div>
+          <h5 class="ambar-border-bottom">Dashboard FTT</h5>
+          <p>Dashboard for tweets with a financial context (Financial Twitter Tracker).</p>
+        </div>
+        <div class="element">
+          <div class="ring ring-grey">
+            <a href="/footballmood">
+              <div class="circletag4"></div>
+            </a>
+          </div>
+          <h5 class="grey-border-bottom">Footballmood</h5>
+          <p>Dashboard for sentiment analysis in sport events.</p>
+        </div>
+      </div>
+    </div>
 
-    <dashboard-tourpedia></dasboard-tourpedia>
+    <div class="bucket -no-bottom g-bg-slate-grey page0 js-photo-stream">
+      <div class="-icon-headline">
+        <div class="row -gutterless">
+            <h3 class="bucket__headline h3 left -with-icon -width-1-2 -mobile-width-1-2 -mobile-larger g-color-white">
+              <span class="gsi-title">
+                See the GSI Group action
+              </span>
+              <a class="git" style="color: #03a9f4;" href="https://github.com/gsi-upm/" target="_blank">View on&nbsp;Github</a>
+          </h3>
+        </div>
+        <div class="row -gutterless -extra-bottom-padding">
+          <p class="little-text">
+            Check out the current projects from GSI&nbsp;Group.
+          </p>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="copyright"> 
+          <img src="http://gsi.dit.upm.es/images/stories/logos/gsi.png" style="height: 50px">
+          <small> © 2017 Grupo de Sistemas Inteligentes, DIT-UPM </small>
+        </div>
+      </div>
+    </div>
 
 
   </template>
