--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <span class="flex"></span>
 
           <!-- Toolbar icons -->
-          <paper-icon-button icon="refresh"  onclick="window.location.reload()"></paper-icon-button>
 
           <!-- Application name -->
           <div class="middle middle-container center horizontal layout" style="margin-left: 0">
@@ -106,7 +105,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <iron-pages attr-for-selected="data-route" selected="home">
 
             <section data-route="home">
-              <dashboard-tourpedia client="{{client}}"></dashboard-tourpedia>
+              <my-greeting></my-greeting>
             </section>
 
           </iron-pages>
