luigi removed from sefarad, some changes in docs, installation improved

--- a/elements/my-greeting/my-greeting.html
+++ b/elements/my-greeting/my-greeting.html
@@ -18,7 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div class="row">
         <div class="element">
           <div class="ring ring-blue">
-            <a href="/demos/tourpedia" target="_blank">
+            <a href="#" target="_blank">
               <div class="circletag1"></div>
             </a>
           </div>
@@ -27,7 +27,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
         <div class="element">
           <div class="ring ring-teal">
-            <a href="/demos/aspects" target="_blank">
+            <a href="#" target="_blank">
               <div class="circletag2"></div>
             </a>
           </div>
@@ -36,16 +36,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
         <div class="element">
           <div class="ring ring-ambar">
-            <a href="/demos/ftt" target="_blank">
+            <a href="#" target="_blank">
               <div class="circletag3"></div>
             </a>
           </div>
           <h5 class="ambar-border-bottom">Dashboard FTT</h5>
-          <p>Dashboard for tweets with a financial context (Financial Twitter Tracker).</p>
+          <p>Dashboard for tweets with a financial context.</p>
         </div>
         <div class="element">
           <div class="ring ring-grey">
-            <a href="/footballmood">
+            <a href="#">
               <div class="circletag4"></div>
             </a>
           </div>
@@ -54,27 +54,42 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
       </div>
     </div>
+    <div class="cd-fixed-bg cd-bg-1">
+      <h1 class="title-blue">
+        Dashboards for Social Media Analysis
+      </h1>
 
+      <h3>
+        Evaluating Millions of Sources in Seconds.
+      </h3>
+
+      <div class="row">
+        <a href="#"><button class="button-span">Tourpedia</button></a>
+        <a href="#"><button class="button-span">Aspects</button></a>
+        <a href="#"><button class="button-span">Financial Tracker</button></a>
+        <a href="#"><button class="button-span">Footballmood</button></a>
+      </div>
+    </div>
     <div class="bucket -no-bottom g-bg-slate-grey page0 js-photo-stream">
       <div class="-icon-headline">
         <div class="row -gutterless">
             <h3 class="bucket__headline h3 left -with-icon -width-1-2 -mobile-width-1-2 -mobile-larger g-color-white">
               <span class="gsi-title">
                 See the GSI Group action
-              </span>
-              <a class="git" style="color: #03a9f4;" href="https://github.com/gsi-upm/" target="_blank">View on&nbsp;Github</a>
+              </span><br>
+              <p class="little-text">
+                Check out the current projects from GSI&nbsp;Group.
+              </p><p class="little-text">
+              <a class="git" style="color: #03a9f4;" href="https://github.com/gsi-upm/" target="_blank"> View on&nbsp;Github</a>
+            </p>
           </h3>
+          <div class="copyright"> 
+          <img align="center" src="http://gsi.dit.upm.es/images/stories/logos/gsi.png" style="height: 50px; margin-left: 38%;">
+          <h4 style="color:#fff"> © 2018 Grupo de Sistemas Inteligentes, DIT-UPM </h4>
+        </div>
         </div>
         <div class="row -gutterless -extra-bottom-padding">
-          <p class="little-text">
-            Check out the current projects from GSI&nbsp;Group.
-          </p>
-        </div>
-      </div>
-      <div class="footer">
-        <div class="copyright"> 
-          <img src="http://gsi.dit.upm.es/images/stories/logos/gsi.png" style="height: 50px">
-          <small> © 2017 Grupo de Sistemas Inteligentes, DIT-UPM </small>
+          
         </div>
       </div>
     </div>
