--- a/elements/my-greeting/my-greeting.html
+++ b/elements/my-greeting/my-greeting.html
@@ -18,7 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div class="row">
         <div class="element">
           <div class="ring ring-blue">
-            <a href="#" target="_blank">
+            <a href="/demos/tourpedia" target="_blank">
               <div class="circletag1"></div>
             </a>
           </div>
@@ -27,7 +27,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
         <div class="element">
           <div class="ring ring-teal">
-            <a href="#" target="_blank">
+            <a href="/demos/aspects" target="_blank">
               <div class="circletag2"></div>
             </a>
           </div>
@@ -36,7 +36,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
         <div class="element">
           <div class="ring ring-ambar">
-            <a href="#" target="_blank">
+            <a href="/demos/ftt" target="_blank">
               <div class="circletag3"></div>
             </a>
           </div>
@@ -45,7 +45,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
         <div class="element">
           <div class="ring ring-grey">
-            <a href="#">
+            <a href="http://footballmood.cluster.gsi.dit.upm.es" target="_blank">
               <div class="circletag4"></div>
             </a>
           </div>
@@ -64,16 +64,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </h3>
 
       <div class="row">
-        <a href="#"><button class="button-span">Tourpedia</button></a>
-        <a href="#"><button class="button-span">Aspects</button></a>
-        <a href="#"><button class="button-span">Financial Tracker</button></a>
-        <a href="#"><button class="button-span">Footballmood</button></a>
+        <a href="/demos/tourpedia" target="_blank"><button class="button-span">Tourpedia</button></a>
+        <a href="/demos/aspects" target="_blank"><button class="button-span">Aspects</button></a>
+        <a href="/demos/ftt" target="_blank"><button class="button-span">Financial Tracker</button></a>
+        <a href="http://footballmood.cluster.gsi.dit.upm.es" target="_blank"><button class="button-span">Footballmood</button></a>
       </div>
     </div>
     <div class="bucket -no-bottom g-bg-slate-grey page0 js-photo-stream">
       <div class="-icon-headline">
         <div class="row -gutterless">
-            <h3 class="bucket__headline h3 left -with-icon -width-1-2 -mobile-width-1-2 -mobile-larger g-color-white">
+            <p class="bucket__headline h3 left -with-icon -width-1-2 -mobile-width-1-2 -mobile-larger g-color-white">
               <span class="gsi-title">
                 See the GSI Group action
               </span><br>
@@ -82,10 +82,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               </p><p class="little-text">
               <a class="git" style="color: #03a9f4;" href="https://github.com/gsi-upm/" target="_blank"> View on&nbsp;Github</a>
             </p>
-          </h3>
+          </p>
           <div class="copyright"> 
           <img align="center" src="http://gsi.dit.upm.es/images/stories/logos/gsi.png" style="height: 50px; margin-left: 38%;">
-          <h4 style="color:#fff"> © 2018 Grupo de Sistemas Inteligentes, DIT-UPM </h4>
+          <div class="col-xs-12" style="height:10px;"></div>
+          <p style="color:#fff"> © 2018 Grupo de Sistemas Inteligentes, DIT-UPM </p>
         </div>
         </div>
         <div class="row -gutterless -extra-bottom-padding">
